# actscore-issue-recreation

./: .gitignore  CMakeLists.txt  README.md  eigen.patch  main.cpp  nvc++_p  provoke_error.patch  provoke_error_remove_matrix.patch
